# Claude-portable

./: .claude-os-root  .dockerignore  .editorconfig  .env.example  .env.server.example  .gitattributes  .gitignore  .lintstagedrc.cjs  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  SOUL.md  agentdb.rvf  biome.json  claude-os  claude-os.cmd  docker-compose.example.yml  package-lock.json  package.json  setup.bat  start.ps1  sync-from-usb.bat  sync-to-usb.bat  sync-vault-pull.bat  sync-vault-push.bat  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  nightly.yml  tauri-bundle.yml
config/: .gitignore  .last-cleanup  CLAUDE.md  settings.json  settings.local.json.template  settings.workpc.json
config/docs/: SYNC-ANLEITUNG.md
config/plans/: mutable-sniffing-boole.md
config/plugins/: installed_plugins.json  known_marketplaces.json
config/scripts/: obsidian-sync.ps1  setup-new-machine.ps1  sync.ps1
docker/: entrypoint.sh
docs/: audit-trail-guide.md  cloud-providers.md  customer-yaml-guide.md  environment.md  future.md  gitnexus.md  integration-plan-cowork-os.md  linux-updates.md  macos-gatekeeper.md  mcp-integration.md  migration-from-portable.md  msp-health-dashboard-guide.md  securepoint-bridge-guide.md  server-deployment.md  setup-guide.md  skill-promotion-workflow.md  sophos-bridge-guide.md  tanss-bridge-guide.md  tauri-updater-setup.md  vault-cleanup-recommendations.md  vault-migration-guide.md  veeam-bridge-guide.md
gui/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs  rpc.rs  supervisor.rs
legacy/: setup.bat  start.bat  start.ps1
scripts/: augment-msp-frontmatter.ps1  build-sidecar.mjs  build-sidecar.ps1  build-sidecar.sh  check-stop-hooks.mjs  merge-frontmatter-blocks.ps1  migrate-vault.ps1  setup.sh  smoke-cli.mjs  smoke-multi-user.sh
tasks/: lessons.md  phase-5c-skill-promotion-gui.md  phase-7a-msp-health-foundation.md  phase-7b-tanss-read-bridge.md  phase-7c-veeam-read-bridge.md  phase-7d-sophos-read-bridge.md  phase-7d2-securepoint-read-bridge.md  phase-7e-aggregate-dashboard.md  phase-7e1-dashboard-polish.md  phase-7e2-filter-sort.md  phase-audit-trail-dashboard.md  phase-msp-cockpit.md  phase-msp-e-note-to-skill.md  phase-server-web.md  phase-web-7-multi-user.md  todo.md  v1.7.1-install-anleitung.md
three-brain-out/: log.md
vault/: .gitignore
(+617 files in other folders)
