[package]
name = "claude-os-shell"
version = "0.1.0-alpha.5"
description = "Tauri desktop shell for claude-os"
authors = ["claude-os contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "claude_os_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
