[package]
name = "claude-os-shell"
version = "1.5.1"
description = "Tauri desktop shell for claude-os"
authors = ["claude-os contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "claude_os_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process", "sync", "time"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
