[package]
name = "claude-os-shell"
version = "1.7.2"
description = "Tauri desktop shell for claude-os"
authors = ["claude-os contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "claude_os_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
# Phase 8 — Auto-Update per ADR-0028. Inactive by default
# (tauri.conf.json plugins.updater.active=false); enable in your fork
# after generating a signing keypair via `tauri signer generate` and
# replacing the pubkey placeholder. See docs/tauri-updater-setup.md.
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "process", "sync", "time"] }
# Native password-input dialog (v1.x.+2). Cross-platform: Win32 message-box,
# macOS NSAlert, Linux zenity/kdialog/matedialog fallback. Wert lebt nur im
# Rust-stack des spawn_blocking-task, niemals im Renderer-JS-heap.
tinyfiledialogs = "3"
once_cell = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
